--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
 ようこそ私のホームページへ<br>
 <img src="/cgi-bin/Count.cgi?df=sample"><br>
-<a href="sample.html">エンジョイ君のページへジャンプ</a>
+<a href="https://ataro-qqq.github.io/BaseCounter-beta-2025-10-07/">エンジョイ君のページへジャンプ</a>
 </body>
 </html>
