--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 ようこそ私のホームページへ<br>
-<img src="/cgi-bin/Count.cgi?df=https://ataro-qqq.github.io/BaseCounter-beta-2025-10-07/"><br>
+<IMG SRC="https://ataro-qqq.github.io/BaseCounter-beta-2025-10-07/Count.cgi?df=index.dat" ALT=""><br>
 <a href="https://ataro-qqq.github.io/BaseCounter-beta-2025-10-07/">エンジョイ君のページへジャンプ</a>
 </body>
 </html>
